--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "jsx": "react-jsx",
     "types": ["node"]
   },
-  "include": ["src", "./*.ts", "./*.tsx", "components/**/*.tsx"],
+  "include": ["./*.ts", "./*.tsx", "components/**/*.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
