feat: Update tsconfig and index.html for Vite
Refines TypeScript configuration to include specific source files and exclude build configurations. Updates index.html to provide a more descriptive comment for the Vite entry point.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "types": ["node"]
+    "jsx": "react-jsx"
   },
-  "include": ["./*.ts", "./*.tsx", "components/**/*.tsx"],
+  "include": ["index.tsx", "App.tsx", "constants.ts", "types.ts", "components/**/*.tsx"],
+  "exclude": ["vite.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
